--- a/Main/Setup/Binaries.wxs
+++ b/Main/Setup/Binaries.wxs
@@ -30,7 +30,7 @@
 				<File Id="XsdDocumentation.PlugIn.dll" KeyPath="yes" Source="$(var.BinFolder)XsdDocumentation.PlugIn.dll" />
 			</Component>
 			<Component Id="AnnotationTranform.xslt" Guid="{056966E9-AA5F-4670-92CE-70E49D4701F9}">
-				<File Id="AnnotationTranform.xslt" KeyPath="yes" Source="$(var.BinFolder)AnnotationTranform.xslt" />
+				<File Id="AnnotationTranform.xslt" KeyPath="yes" Source="$(var.EtcFolder)Schemas\AnnotationTranform.xslt" />
 			</Component>
 			<Component Id="Help.chm" Guid="{142A6051-2102-4B95-B65D-FDCFAE12C5CD}">
 				<File Id="Help.chm" KeyPath="yes" Source="$(var.HelpFolder)Help.chm" />
@@ -48,7 +48,7 @@
 	<Fragment Id="Schemas">
 		<DirectoryRef Id="VS90_SCHEMAS_DIR">
 			<Component Id="XsdDocumentation.xsd" Guid="{8D7753F8-9588-46CA-89F9-88908A3741C9}">
-				<File Id="XsdDocumentation.xsd" KeyPath="yes" Source="$(var.BinFolder)XsdDocumentation.xsd" />
+				<File Id="XsdDocumentation.xsd" KeyPath="yes" Source="$(var.EtcFolder)\Schemas\XsdDocumentation.xsd" />
 			</Component>
 		</DirectoryRef>
 
