--- a/Main/Setup/Product.wxs
+++ b/Main/Setup/Product.wxs
@@ -16,7 +16,7 @@
 
 		<Upgrade Id="$(var.UpgradeCode)">
 			<UpgradeVersion Minimum="!(bind.fileVersion.XsdDocumentation.PlugIn.dll)" IncludeMinimum="no" OnlyDetect="yes" Property="NEWERVERSIONDETECTED" />
-			<UpgradeVersion Minimum="0.0.0.0" IncludeMinimum="yes" Maximum="!(bind.fileVersion.XsdDocumentation.PlugIn.dll)" IncludeMaximum="no" Property="OLDERVERSIONBEINGUPGRADED" />
+			<UpgradeVersion Minimum="0.0.0.0" IncludeMinimum="yes" Maximum="!(bind.fileVersion.XsdDocumentation.PlugIn.dll)" IncludeMaximum="yes" Property="OLDERVERSIONBEINGUPGRADED" />
 		</Upgrade>
 
 		<!-- Properties -->
@@ -32,7 +32,7 @@
 		<Property Id="SHFB_EXISTS" Secure="yes">
 			<DirectorySearch Id="ShfbRootSearch" Path="[%SHFBROOT]">
 				<!-- We must set the version number one lower than the actual file we are looking for. -->
-				<FileSearch Name="SandcastleBuilderGUI.exe" MinVersion="1.7.9.9"/>
+				<FileSearch Name="SandcastleBuilderGUI.exe" MinVersion="1.8.0.1" />
 			</DirectorySearch>
 		</Property>
 
@@ -46,7 +46,7 @@
 			NOT NEWERVERSIONDETECTED
 		</Condition>
 
-		<Condition Message="[ProductName] requires Sandcastle Help File Builder 1.8 or higher.&#13;&#10;&#13;&#10;Visit http://shfb.codeplex.com/ to download the latest stable release.">
+		<Condition Message="[ProductName] requires Sandcastle Help File Builder 1.8.0.2 or higher.&#13;&#10;&#13;&#10;Visit http://shfb.codeplex.com/ to download the latest stable release.">
 			Installed OR SHFB_EXISTS
 		</Condition>
 
