Enable build server scenarios
Enable users to use SHFB and XsdDoc without actually installing it.
This is useful in build server scenarios where people want to include
small tools directly into the version control.

This has the nice side effect that we are now also able to bootstrap
the build i.e. we can use the version XsdDoc we just compiled for
building the documentation.

--- a/Main/Setup/Binaries.wxs
+++ b/Main/Setup/Binaries.wxs
@@ -18,7 +18,7 @@
 				<File Id="XsdDocumentation.BuildComponents.components" KeyPath="yes" Source="$(var.BinFolder)XsdDocumentation.BuildComponents.components" />
 			</Component>
 			<Component Id="AnnotationTranform.xslt" Guid="{056966E9-AA5F-4670-92CE-70E49D4701F9}">
-				<File Id="AnnotationTranform.xslt" KeyPath="yes" Source="$(var.EtcFolder)Schemas\AnnotationTranform.xslt" />
+				<File Id="AnnotationTranform.xslt" KeyPath="yes" Source="$(var.BinFolder)AnnotationTranform.xslt" />
 			</Component>
 			<Component Id="Help.chm" Guid="{142A6051-2102-4B95-B65D-FDCFAE12C5CD}">
 				<File Id="Help.chm" KeyPath="yes" Source="$(var.HelpFolder)Help.chm" />
