--- a/Main/Setup/Binaries.wxs
+++ b/Main/Setup/Binaries.wxs
@@ -5,23 +5,23 @@
 
   <Fragment Id="XsdDocComponentsAndPlugIns">
     <DirectoryRef Id="XsdDocComponentsAndPlugIns">
-      <Component Id="XsdDocumentation.dll" Guid="{182939C3-6E9A-4403-ABED-8E5E1E03B8CE}">
-        <File Id="XsdDocumentation.dll" KeyPath="yes" Source="$(var.BinFolder)XsdDocumentation.dll" />
+      <Component>
+        <File Source="$(var.BinFolder)XsdDocumentation.dll" />
       </Component>
-      <Component Id="XsdDocumentation.PlugIn.plugins" Guid="{7E697FD8-9669-4330-9920-925C8D039DD7}">
-        <File Id="XsdDocumentation.PlugIn.plugins" KeyPath="yes" Source="$(var.BinFolder)XsdDocumentation.PlugIn.plugins" />
+      <Component>
+        <File Source="$(var.BinFolder)XsdDocumentation.PlugIn.plugins" />
       </Component>
-      <Component Id="XsdDocumentation.BuildComponents.dll" Guid="{6787E6BB-EFAF-4201-872B-1FDABED432FD}">
-        <File Id="XsdDocumentation.BuildComponents.dll" KeyPath="yes" Source="$(var.BinFolder)XsdDocumentation.BuildComponents.dll" />
+      <Component>
+        <File Source="$(var.BinFolder)XsdDocumentation.BuildComponents.dll" />
       </Component>
-      <Component Id="XsdDocumentation.BuildComponents.components" Guid="{5F3F429E-9916-479A-B684-6915292D0866}">
-        <File Id="XsdDocumentation.BuildComponents.components" KeyPath="yes" Source="$(var.BinFolder)XsdDocumentation.BuildComponents.components" />
+      <Component>
+        <File Source="$(var.BinFolder)XsdDocumentation.BuildComponents.components" />
       </Component>
-      <Component Id="AnnotationTranform.xslt" Guid="{056966E9-AA5F-4670-92CE-70E49D4701F9}">
-        <File Id="AnnotationTranform.xslt" KeyPath="yes" Source="$(var.BinFolder)AnnotationTranform.xslt" />
+      <Component>
+        <File Source="$(var.BinFolder)AnnotationTranform.xslt" />
       </Component>
-      <Component Id="Help.chm" Guid="{142A6051-2102-4B95-B65D-FDCFAE12C5CD}">
-        <File Id="Help.chm" KeyPath="yes" Source="$(var.HelpFolder)Help.chm" />
+      <Component>
+        <File Source="$(var.HelpFolder)Help.chm" />
       </Component>
     </DirectoryRef>
 
@@ -38,7 +38,7 @@
   <Fragment Id="Schemas">
     <DirectoryRef Id="VS90_SCHEMAS_DIR">
       <Component Id="XsdDocumentation.xsd" Guid="{8D7753F8-9588-46CA-89F9-88908A3741C9}">
-        <File Id="XsdDocumentation.xsd" KeyPath="yes" Source="$(var.EtcFolder)\Schemas\XsdDocumentation.xsd" />
+          <File KeyPath="yes" Source="$(var.EtcFolder)\Schemas\XsdDocumentation.xsd" />
       </Component>
     </DirectoryRef>
 
