--- a/Main/Setup/Media.wxs
+++ b/Main/Setup/Media.wxs
@@ -5,74 +5,74 @@
 
   <Fragment>
     <DirectoryRef Id="XsdDocMedia">
-      <Component Id="XsdAllIcon.png" Guid="{B33E53FD-608A-4543-9A02-108F5DCF3190}">
-        <File Id="XsdAllIcon.png" Name="XsdAllIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdAllIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdAllIcon.png" />
       </Component>
-      <Component Id="XsdAnyAttributeIcon.png" Guid="{958B731A-F31C-40FC-B339-DAF4D66DF845}">
-        <File Id="XsdAnyAttributeIcon.png" Name="XsdAnyAttributeIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdAnyAttributeIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdAnyAttributeIcon.png" />
       </Component>
-      <Component Id="XsdAnyElementIcon.png" Guid="{AA98F788-022E-4A6C-9CEA-77B0C339604C}">
-        <File Id="XsdAnyElementIcon.png" Name="XsdAnyElementIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdAnyElementIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdAnyElementIcon.png" />
       </Component>
-      <Component Id="XsdAttributeGroupIcon.png" Guid="{D09C449E-8683-4CDD-87E6-4D2C359728E3}">
-        <File Id="XsdAttributeGroupIcon.png" Name="XsdAttributeGroupIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdAttributeGroupIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdAttributeGroupIcon.png" />
       </Component>
-      <Component Id="XsdAttributeIcon.png" Guid="{43B33A55-D4A7-4C3F-9522-EB5C46D50539}">
-        <File Id="XsdAttributeIcon.png" Name="XsdAttributeIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdAttributeIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdAttributeIcon.png" />
       </Component>
-      <Component Id="XsdAttributeRefIcon.png" Guid="{A78A3936-752F-4F9B-ADF8-13C370F89996}">
-        <File Id="XsdAttributeRefIcon.png" Name="XsdAttributeRefIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdAttributeRefIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdAttributeRefIcon.png" />
       </Component>
-      <Component Id="XsdChoiceIcon.png" Guid="{30B99C64-BC47-47F3-BE8F-491B463F7D0B}">
-        <File Id="XsdChoiceIcon.png" Name="XsdChoiceIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdChoiceIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdChoiceIcon.png" />
       </Component>
-      <Component Id="XsdComplexTypeIcon.png" Guid="{4F7A2E74-9A8F-4D0E-A473-F9402C60782B}">
-        <File Id="XsdComplexTypeIcon.png" Name="XsdComplexTypeIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdComplexTypeIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdComplexTypeIcon.png" />
       </Component>
-      <Component Id="XsdElementIcon.png" Guid="{C3EA19FA-D28C-41C5-A934-7930B8460345}">
-        <File Id="XsdElementIcon.png" Name="XsdElementIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdElementIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdElementIcon.png" />
       </Component>
-      <Component Id="XsdElementRefIcon.png" Guid="{49BD2A91-CE0F-4595-9091-198B57910F66}">
-        <File Id="XsdElementRefIcon.png" Name="XsdElementRefIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdElementRefIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdElementRefIcon.png" />
       </Component>
-      <Component Id="XsdExtensionIcon.png" Guid="{798AB80B-2580-46A4-A505-62B72E605CC9}">
-        <File Id="XsdExtensionIcon.png" Name="XsdExtensionIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdExtensionIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdExtensionIcon.png" />
       </Component>
-      <Component Id="XsdFacetIcon.png" Guid="{BB12BA6D-8290-4A7A-9C12-4CB316FA3915}">
-        <File Id="XsdFacetIcon.png" Name="XsdFacetIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdFacetIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdFacetIcon.png" />
       </Component>
-      <Component Id="XsdGroupIcon.png" Guid="{215F22E7-CE96-47D3-98C5-7091E9F6E0EE}">
-        <File Id="XsdGroupIcon.png" Name="XsdGroupIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdGroupIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdGroupIcon.png" />
       </Component>
-      <Component Id="XsdKeyIcon.png" Guid="{056513AF-2D67-4422-9E41-F09AC0C3548B}">
-        <File Id="XsdKeyIcon.png" Name="XsdKeyIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdKeyIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdKeyIcon.png" />
       </Component>
-      <Component Id="XsdKeyRefIcon.png" Guid="{70FD5B15-8CF7-4B12-B095-D4E337C1E431}">
-        <File Id="XsdKeyRefIcon.png" Name="XsdKeyRefIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdKeyRefIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdKeyRefIcon.png" />
       </Component>
-      <Component Id="XsdListIcon.png" Guid="{C3A27732-C102-43F8-B204-EE715CBE462C}">
-        <File Id="XsdListIcon.png" Name="XsdListIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdListIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdListIcon.png" />
       </Component>
-      <Component Id="XsdNamespaceIcon.png" Guid="{DF2572BB-3FAE-44C6-9C40-033171B2F060}">
-        <File Id="XsdNamespaceIcon.png" Name="XsdNamespaceIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdNamespaceIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdNamespaceIcon.png" />
       </Component>
-      <Component Id="XsdRestrictionIcon.png" Guid="{8AA02353-F7E0-4272-864F-AC8553E9AC3E}">
-        <File Id="XsdRestrictionIcon.png" Name="XsdRestrictionIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdRestrictionIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdRestrictionIcon.png" />
       </Component>
-      <Component Id="XsdSchemaIcon.png" Guid="{2A5C6E0C-8640-40BE-AB8A-6FF99AF2C3DB}">
-        <File Id="XsdSchemaIcon.png" Name="XsdSchemaIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdSchemaIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdSchemaIcon.png" />
       </Component>
-      <Component Id="XsdSequenceIcon.png" Guid="{46A30577-D121-466A-AD5F-8EB9F26F6BA3}">
-        <File Id="XsdSequenceIcon.png" Name="XsdSequenceIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdSequenceIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdSequenceIcon.png" />
       </Component>
-      <Component Id="XsdSimpleTypeIcon.png" Guid="{5B909816-8314-4A62-B160-8F93A1825471}">
-        <File Id="XsdSimpleTypeIcon.png" Name="XsdSimpleTypeIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdSimpleTypeIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdSimpleTypeIcon.png" />
       </Component>
-      <Component Id="XsdUnionIcon.png" Guid="{47682360-F01E-498C-876A-D27E6D6242D4}">
-        <File Id="XsdUnionIcon.png" Name="XsdUnionIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdUnionIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdUnionIcon.png" />
       </Component>
-      <Component Id="XsdUniqueIcon.png" Guid="{52476846-092B-47B1-8116-CC19972C3B3B}">
-        <File Id="XsdUniqueIcon.png" Name="XsdUniqueIcon.png" KeyPath="yes" Source="$(var.BinFolder)Media\XsdUniqueIcon.png" />
+      <Component>
+        <File Source="$(var.BinFolder)Media\XsdUniqueIcon.png" />
       </Component>
     </DirectoryRef>
   </Fragment>
