--- a/Main/Setup/Product.wxs
+++ b/Main/Setup/Product.wxs
@@ -54,6 +54,7 @@
     <!-- Files and Directories -->
 
     <PropertyRef Id="VS90_SCHEMAS_DIR" />
+    <PropertyRef Id="VS2010_SCHEMAS_DIR" />
 
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="CommonAppDataFolder">
@@ -68,12 +69,14 @@
         </Directory>
       </Directory>
       <Directory Id="VS90_SCHEMAS_DIR" />
+      <Directory Id="VS2010_SCHEMAS_DIR" />
     </Directory>
 
     <!-- Features -->
 
     <FeatureRef Id="Binaries" />
-    <FeatureRef Id="Schemas" />
+    <FeatureRef Id="VS2008_Schemas" />
+    <FeatureRef Id="VS2010_Schemas" />
 
     <!-- Install Sequences -->
 
