--- a/Setup/Product.wxs
+++ b/Setup/Product.wxs
@@ -57,6 +57,7 @@
     <PropertyRef Id="VS90_SCHEMAS_DIR" />
     <PropertyRef Id="VS2010_SCHEMAS_DIR" />
     <PropertyRef Id="VS11_SCHEMAS_DIR" />
+    <PropertyRef Id="VS2013_SCHEMAS_DIR" />
 
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="CommonAppDataFolder">
@@ -73,6 +74,7 @@
       <Directory Id="VS90_SCHEMAS_DIR" />
       <Directory Id="VS2010_SCHEMAS_DIR" />
       <Directory Id="VS11_SCHEMAS_DIR" />
+      <Directory Id="VS2013_SCHEMAS_DIR" />
     </Directory>
 
     <!-- Features -->
