Make plug-in and component compatible with SHFB
The current version of SHFB (2014.4.22.0) has made a few changes that
requires work:

- Plug-ins and components are now MEF exports
- Sandcastle is no longer external
- SHFBCOMPONENTROOT is replaced with ComponentPath
- Plug-in DLLs are no longer named *.plugins
- Build components no longer need *.components files

--- a/setup/Binaries.wxs
+++ b/setup/Binaries.wxs
@@ -9,13 +9,10 @@
         <File Source="$(var.BinFolder)XsdDocumentation.dll" />
       </Component>
       <Component>
-        <File Source="$(var.BinFolder)XsdDocumentation.PlugIn.plugins" />
+        <File Source="$(var.BinFolder)XsdDocumentation.PlugIn.dll" />
       </Component>
       <Component>
         <File Source="$(var.BinFolder)XsdDocumentation.BuildComponents.dll" />
-      </Component>
-      <Component>
-        <File Source="$(var.BinFolder)XsdDocumentation.BuildComponents.components" />
       </Component>
       <Component>
         <File Source="$(var.BinFolder)AnnotationTranform.xslt" />
@@ -27,9 +24,8 @@
 
     <ComponentGroup Id="XsdDocComponentsAndPlugIns">
       <ComponentRef Id="XsdDocumentation.dll"/>
-      <ComponentRef Id="XsdDocumentation.PlugIn.plugins"/>
+      <ComponentRef Id="XsdDocumentation.PlugIn.dll"/>
       <ComponentRef Id="XsdDocumentation.BuildComponents.dll"/>
-      <ComponentRef Id="XsdDocumentation.BuildComponents.components"/>
       <ComponentRef Id="AnnotationTranform.xslt"/>
       <ComponentRef Id="Help.chm"/>
     </ComponentGroup>
